ccenter/main/default/objects/Distribution__c/Distribution__c.object-meta.xml
<CustomObject>
    <description>A scheduled distribution of food assistance from a Distribution Site</description>
    <label>Distribution</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{0000}</displayFormat>
        <label>Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>