ccenter/main/default/objects/Distribution__c/fields/Actual_Dispersements__c.field-meta.xml
<CustomField>
    <fullName>Actual_Dispersements__c</fullName>
    <description>The actual number of recipients that received food assistance for this distribuiton</description>
    <label>Actual Dispersements</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>