ccenter/main/default/objects/Distribution__c/fields/Actual_Households_Served__c.field-meta.xml
<CustomField>
    <fullName>Actual_Households_Served__c</fullName>
    <label>Actual Households Served</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>