ccenter/main/default/objects/Distribution__c/fields/Distribution_Year__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Year__c</fullName>
    <label>Distribution Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>