ccenter/main/default/objects/Distribution__c/fields/Expected_Dispersements__c.field-meta.xml
<CustomField>
    <fullName>Expected_Dispersements__c</fullName>
    <description>The number of households we expect to serve this month.</description>
    <inlineHelpText>This is typically last months actual recipients multiples by 10%</inlineHelpText>
    <label>Expected Dispersements</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>