ccenter/main/default/objects/Distribution__c/fields/Expected_Households_Served__c.field-meta.xml
<CustomField>
    <fullName>Expected_Households_Served__c</fullName>
    <label>Expected Households Served</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>